--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "jest": "^23.3.0"
+    "eslint": "^5.1.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
