--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "eslint": "^5.1.0",
     "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "jest-localstorage-mock": "^2.2.0"
   }
 }
