--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.1.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.10.0",
+    "jest-enzyme": "^6.0.2",
     "jest-localstorage-mock": "^2.2.0"
   }
 }
