--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "cy": "cypress open",
+    "cy:run": "cypress run",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
