ESLint plugins, VSCode settings
* Use eslint-plugin-import
* Remove eslint-plugin-cypress (it doesn't seem to be needed)
* VSCode: Format on save

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,13 +13,15 @@
         "sourceType": "module"
     },
     "plugins": [
+        "import",
         "jest",
         "react"
     ],
     "extends": [
-        "plugin:react/recommended",
+        "eslint:recommended",
+        "plugin:import/recommended",
         "plugin:jest/recommended",
-        "eslint:recommended"
+        "plugin:react/recommended"
     ],
     "rules": {
         "react/no-typos": "error"
