ESlint: update rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "plugin:react/recommended"
     ],
     "rules": {
-        "react/no-typos": "error"
+        "react/no-typos": "error",
+        "react/no-unused-prop-types": "error"
     }
 }
